[project]
name = "simple-time-mcp"
version = "0.1.2"
description = "Simple MCP demo: get current UTC time"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
simple-time-mcp = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
